# forgeax-interface

./: .dependency-cruiser.cjs  .env.example  .gitignore  NOTICE  README.md  README.zh-CN.md  bunfig.toml  index.html  node_modules  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.lint.json  vite.config.ts
public/: popout.html
scripts/: check-agnostic-boundary.ts
src/: App.css  App.tsx  app-kit.ts  appHostBootstrap.test.ts  appHostBootstrap.ts  forgeax-engine.d.ts  index.ts  main.tsx  store.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/boot/: SettingsSection.tsx  broadcast.ts  driver.ts  store.ts  themes.ts  types.ts
src/brand/: BrandProvider.tsx  index.ts  runtime.ts  types.ts
src/components/: DetachedSurface.tsx  ErrorBoundary.tsx  SettingsPrimitives.tsx
src/components/ActivityRail/: ActivityRail.css  ActivityRail.tsx
src/components/AgentAvatar/: AgentAvatar.tsx
src/components/AgentAvatarVideo/: avatar-registry.ts  useAgentAvatarState.ts
src/components/BuildBadge/: BuildBadge.tsx
src/data/: agent-groups.ts
src/hooks/: useWorkbenchRailResize.ts
src/i18n/: LanguageSettingsSection.tsx  index.ts
src/lib/: a11y-summary.ts  action-dom-discovery.ts  action-registry.test.ts  action-registry.ts  aegis.ts  agent-cli-provider.test.ts  agent-cli-provider.ts  agent-name.ts  agent-role.ts  ai-intents.ts  app-kit.test.ts  broadcast-stream.ts  browser-prefs-sync.ts  builtin-actions.test.ts  builtin-actions.ts  bus-api.test.ts  bus-api.ts  bus.test.ts  bus.ts  checkpoint-api.ts  cli-providers.ts  command-palette-store.ts  composer-bridge-pill.test.ts  composer-bridge-references.test.ts  composer-bridge.ts  dashboard-api.ts  deep-link-bus.ts  dialog.tsx  extension-api.test.ts  extension-api.ts  file-activity-stream.ts  forgeax-bridge.ts  global-shortcuts.test.ts  global-shortcuts.ts  logSink.ts  menu-registry.test.ts  menu-registry.ts  model-config.ts  model-prefs.ts  model.ts  (+45 more)
src/store-parts/: observability.ts  persistence.ts  session-client.test.ts  session-client.ts  session-pick.test.ts  session-pick.ts  shell.ts  workbench-client.ts
src/styles/: foundation.tokens.json  global.css  motion.css  plugin-token-bridge.css  primitive.css  semantic.tokens.json  tokens.css
src/test-utils/: mockHost.ts
test/: happydom.ts
test/e2e/: README.md  smoke.mjs
(+324 files in other folders)
