[package]
name = "forgeax-studio-desktop"
version = "0.1.0"
description = "ForgeaX Studio desktop shell (Tauri 2)"
edition = "2021"
rust-version = "1.77"

# The library is what the desktop binary and (future) mobile targets link
# against. `main.rs` is a thin launcher that calls `forgeax_studio_desktop_lib::run()`.
[lib]
name = "forgeax_studio_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Timer for the SidecarSupervisor's restart backoff. tokio is already pulled in
# transitively by tauri's async_runtime; we depend on it directly for time::sleep.
tokio = { version = "1", features = ["time"] }

[features]
# Tauri's devtools in debug builds.
default = []
